<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/light_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_logo"
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/light_black"
        app:cardCornerRadius="8dp"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/cgpaButton"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="15dp"
                app:srcCompat="@drawable/ic_score" />

            <TextView
                android:id="@+id/cgpaText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/cgpaCalc"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/contestsButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@id/rmButton"
        android:layout_below="@id/cv"
        app:cardBackgroundColor="@color/light_black"
        app:cardCornerRadius="8dp"
        android:layout_margin="8dp"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintBottom_toTopOf="@id/rmButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/contests"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="15dp"
                app:srcCompat="@drawable/ic_programming_24" />

            <TextView
                android:id="@+id/contestsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="Contests"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/githubButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_above="@id/rmButton"
        android:layout_below="@id/cv"
        app:cardBackgroundColor="@color/light_black"
        app:cardCornerRadius="8dp"
        android:layout_margin="8dp"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintBottom_toTopOf="@id/rmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/github"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="15dp"
                app:srcCompat="@drawable/ic_programmer" />

            <TextView
                android:id="@+id/githubText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/github"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/rmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/light_black"
        app:cardCornerRadius="8dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/rm"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="15dp"
                app:srcCompat="@drawable/dtu" />

            <TextView
                android:id="@+id/rmText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="Resume Manager"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
